--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="gameContainer">
+  <!-- 40x40 grid of pixels -->
+  <div class="pixel" id="pixel1"></div>
+  <div class="pixel" id="pixel2"></div>
+  ...
+  <div class="pixel" id="pixel1600"></div>
+
+  <!-- Food pixel -->
+  <div class="food" id="foodPixel"></div>
+</div>
+
+<!-- Score board -->
+<div class="scoreBoard">Score: <span id="score"></span></div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
